<resources>

    <string name="app_name">Age Recognition</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="splash_page_title">COMP90019 Final Project</string>
    <string name="splash_page_subtitle">Age Recognition App</string>
    <string name="splash_page_author1">875095 Jize Dong</string>
    <string name="splash_page_author2">911764 Minsheng Wang</string>
    <string name="splash_page_supervisor">Supervised by: Prof. Richard Sinnott</string>
    <string name="album">ALBUM</string>
    <string name="title_activity_haha">HahaActivity</string>
</resources>
